--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<div  id="logo"><img src="Images/logo.png"></div>
+		<div  id="logo"><img src="images/logo.png"></div>
 		<nav>
 			<ul id="menu">
 				<li><a href="#">Início</a></li>
@@ -39,7 +39,7 @@
 		<section id="gallery">
 			<h1>Artigos</h1>
 			<div class="foto-texto">
-				<img src="Images/d.jpg" alt="Imagem">
+				<img src="images/d.jpg" alt="Imagem">
 				<p>Compartilhar sustentável significa adotar práticas que promovam a economia de recursos, a redução de desperdícios e a utilização de bens e serviços de forma mais eficiente, beneficiando tanto o meio ambiente quanto a sociedade. Isso se traduz em compartilhar objetos, roupas, carros, moradias e até mesmo informações, reduzindo a demanda por novos produtos e promovendo uma consciência coletiva.ESG (Environmental, social and corporate governance), sigla em inglês, significa Governança Ambiental, Social e Corporativa, que tem como objetivo unir comportamentos em todas as etapas de uma empresa a fim de alcançar melhorias socioambientais. Uma delas é o NET Zero, responsável por reduzir as emissões de gases do efeito estufa na atmosfera desde a geração de um produto até seu consumo final. 
 
 
@@ -47,7 +47,7 @@
 			  </div>
 			  
 			  <div class="foto-texto">
-				<img src="Images/f.jpg" alt="Imagem">
+				<img src="images/f.jpg" alt="Imagem">
 				<p>A tecnologia sustentável é um tipo de inovação que tem como objetivo minimizar impactos negativos no meio ambiente, promover a eficiência energética e reduzir o consumo de recursos naturais. É uma resposta às crescentes preocupações com as mudanças climáticas, poluição, esgotamento de recursos e perda de biodiversidade.Tecnologia sustentável é qualquer tecnologia utilizada com o objetivo de conservar os recursos naturais e promover o desenvolvimento social e econômico para as gerações futuras. Um conjunto de técnicas, habilidades, métodos e processos usados para produzir um produto.
 
 					Essas tecnologias sustentáveis exercem papéis importantes:
